--- a/exploration.Rmd
+++ b/exploration.Rmd
@@ -42,6 +42,7 @@ df18 <- s18 %>% mutate(Student = case_when(grepl("^N",   Student) ~ "no",
                                                 grepl("^Sec",  FormalEducation) ~ "Secondary",
                                                 grepl("^Prof", FormalEducation) ~ "Professional",
                                                 grepl("^Oth",  FormalEducation) ~ "Doctoral",
+                                                grepl("never", FormalEducation) ~ "None",
                                                 TRUE ~ NA_character_),
                        
                           Undergrad = case_when(grepl("^Math",    UndergradMajor) ~ "Math",
@@ -90,17 +91,27 @@ df18 <- s18 %>% mutate(Student = case_when(grepl("^N",   Student) ~ "no",
                        
                           Sex = case_when(grepl("Male",   Gender) ~ "Male",
                                           grepl("Female", Gender) ~ "Female",
-                                          TRUE ~ NA_character_)
+                                          TRUE ~ NA_character_),
+                       
+                          TimeAfterBootcamp = case_when(grepl("^Imm",       TimeAfterBootcamp) ~ "Immediate",
+                                                        grepl("already",    TimeAfterBootcamp) ~ "Before",
+                                                        grepl("^Six",       TimeAfterBootcamp) ~ "6-12 Months",
+                                                        grepl("^Four",      TimeAfterBootcamp) ~ "4-6 Months",
+                                                        grepl("^One",       TimeAfterBootcamp) ~ "1-3 Months",
+                                                        grepl("^Less",      TimeAfterBootcamp) ~ "<1 Month",
+                                                        grepl("^Long",      TimeAfterBootcamp) ~ ">1 Year",
+                                                        grepl("haven",      TimeAfterBootcamp) ~ "Searching",
+                                                        TRUE ~ NA_character_)
                        
                           
                           
                                                 
                        ) %>% 
-                select(Country, Student, Education, Undergrad, Employment, YearsCoding, YearsCodingProf, JobYear,
-                       JobSearchStatus,TimeAfterBootcamp,
-                       DevType, LanguageWorkedWith,LanguageDesireNextYear, 
-                       PlatformWorkedWith, DatabaseWorkedWith, FrameworkWorkedWith,
-                       Salary, CurrencySymbol, ConvertedSalary, SalaryType, Age, EducationParents, Sex)
+                select(Country, Student, Education, Undergrad, Employment, YearsCoding, YearsCodingProf, 
+                       JobYear, JobSearchStatus,TimeAfterBootcamp,
+                       DevType, LanguageWorkedWith, PlatformWorkedWith, DatabaseWorkedWith, FrameworkWorkedWith,
+                       Salary, CurrencySymbol, ConvertedSalary, SalaryType, 
+                       EducationParents, Sex)
 
 ```
 
@@ -128,7 +139,21 @@ df17 <- s17 %>% mutate(
                                                 grepl("^Sec",  FormalEducation) ~ "Secondary",
                                                 grepl("^Prof", FormalEducation) ~ "Professional",
                                                 grepl("^Doc",  FormalEducation) ~ "Doctoral",
-                                                TRUE ~ NA_character_),            
+                                                grepl("never", FormalEducation) ~ "None",
+                                                TRUE ~ NA_character_),     
+                    
+                          EducationParents = case_when(grepl("^So",           HighestEducationParents) ~ "Post-secondary",
+                                                       grepl("bach",    HighestEducationParents) ~ "Bachelor's",
+                                                       #grepl("^Assoc",  HighestEducationParents) ~ "Associate's",
+                                                       grepl("^So",           HighestEducationParents) ~ "Post-secondary",
+                                                       grepl("mas",           HighestEducationParents) ~ "Master's",
+                                                       grepl("^High",         HighestEducationParents) ~ "Secondary",
+                                                       grepl("prof",          HighestEducationParents) ~ "Professional",
+                                                       grepl("doc",           HighestEducationParents) ~ "Doctoral",
+                                                       grepl("know",          HighestEducationParents) ~ "Unknown",
+                                                       grepl("^Prim",         HighestEducationParents) ~ "Primary",
+                                                       grepl("^No",           HighestEducationParents) ~ "None",
+                                                       TRUE ~ NA_character_),     
             
 
                           Undergrad = case_when(grepl("^Math",                  MajorUndergrad) ~ "Math",
@@ -168,15 +193,32 @@ df17 <- s17 %>% mutate(
                                                       grepl("years",      YearsCodedJob,perl=T) ~ "20+",
                                                       TRUE ~ NA_character_),
                           
-                                                
-  
-  
-  
+                          
+                          TimeAfterBootcamp = case_when(grepl("^Imm",       TimeAfterBootcamp) ~ "Immediate",
+                                                        grepl("comple",     TimeAfterBootcamp) ~ "Immediate",
+                                                        grepl("already",    TimeAfterBootcamp) ~ "Before",
+                                                        grepl("^Six",       TimeAfterBootcamp) ~ "6-12 Months",
+                                                        grepl("^Four",      TimeAfterBootcamp) ~ "4-6 Months",
+                                                        grepl("^One",       TimeAfterBootcamp) ~ "1-3 Months",
+                                                        grepl("^Less",      TimeAfterBootcamp) ~ "<1 Month",
+                                                        grepl("^Long",      TimeAfterBootcamp) ~ ">1 Year",
+                                                        grepl("haven",      TimeAfterBootcamp) ~ "Searching",
+                                                        TRUE ~ NA_character_),
+                    
+                          Sex = case_when(grepl("Male",   Gender) ~ "Male",
+                                          grepl("Female", Gender) ~ "Female",
+                                          TRUE ~ NA_character_),
+                    
+                          
   
   
 ) %>% 
-  select(Country, Student, Education, Undergrad, Employment, YearsCoding, YearsCodingProf)
+  select(Country, Student, Education, Undergrad, Employment, YearsCoding, YearsCodingProf,
+         TimeAfterBootcamp,
+         Salary, Currency,
+         EducationParents, Sex)
 
+# Ambiguous whether salary is adjusted to USD
 
 
 
